--- a/client/src/components/modals/ModalStyles.css
+++ b/client/src/components/modals/ModalStyles.css
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 100;
 }
 
 .modal {
@@ -19,8 +20,9 @@
 }
 
 .modal .form-title-container {
+  position: relative;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .modal .form-title-container button {
